Addition of mode-switching function and other support
・Added rotation and movement modes
・Roll is always 0
・Separate ContentModel.java into UImanager.java and CameraController.java

CityGMLのエクスポート対応

【変更】
・エクスポート先のフォルダを生成
  　- インポートファイルのフォルダをudx以下を除いてコピー
・モデルのテクスチャをエクスポート
　  - 新たにテクスチャエクスポート用のクラス（TextureExpoer）を作成し、TextureExpoerのメソッドを実行

【動作確認】
・testフォルダにあるCityGMLをエクスポートし、再度インポートできることを確認

テクスチャエクスポート用のクラスの作成

【変更】
下記を持つクラスの作成
・ImageURIの取得
・モデルからテクスチャの取得
・jpg形式で書き出し

Revert "テクスチャエクスポート用のクラスの作成"

This reverts commit 8a6da4d2ea85ac34cb7582a2cb7b4018487e3160.

Revert "Revert "テクスチャエクスポート用のクラスの作成""

This reverts commit 3096dfbacb2c20177bbda3f66f019e71232bf28c.

Revert "CityGMLのエクスポート対応"

This reverts commit fcfc564bbf70c84e81b476afdb4a3b2f55bc749e.

Revert "Revert "CityGMLのエクスポート対応""

This reverts commit 946c6ba23542cfab5456b3a94a0f764918fe70be.

クラスの整理

・CameraController
　→Camera
・UIManager
　→廃止
・World
　→Root3D含有
・SceneContent
　→SubSceneやContentを所有
・Light
・AxisGizmo
・AntiAliasing
　→他のクラスから分離

クラスの整理に合わせた修正

表題の通り

コメントの修正

軽微な修正

・コンパイルエラーに対応
・javadoc記入